VP 10.6.0 Changelog
------------------------

- add checkbox to image manager to use internal name as filename for exporting

- fix "all sounds to rear channels" bug

- add missing implementation for -pov command line option

- remove all table encryption, old locked tables automatically unlock now

- add buttons to video preferences to easily setup defaults for low- or high-end PCs

- updated to latest FreeImage.dll (3.18.0)

- see core scripts (header of core.vbs) for the respective changelog (version 3.57)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes

- DirectX 8 port for input handling (currently disabled)

VP 10.5.0 Changelog
------------------------

- add ScreenSpace Reflections to the global video and table user properties, strength can be changed in the table lighting panel
   This adds very fake, but also very fast local reflection effects to all table elements
- make exclusive fullscreen the new default when using Windows 10 build 1803 and above
- add option to the global video preferences to disable reflections of dynamic elements on the playfield (to help lower end PC systems)

- static table elements are now over-sampled/better anti-aliased and always rendered at highest detail level (latter only applicable for rubbers and ramps)

- improve quality of internal DMD shader, now it's almost resolution independent, especially when using it via flashers (e.g. FSS tables and the like)

- fix issue with optimized dynamic group rendering of primitives, in general note that
   1. if all elements in a group are dynamic primitives/meshes and all these use the same texture and same material, they will be grouped into
      one big render buffer/single render call to speed up the rendering of transparent meshes on the table (like the plastics for example)
   2. if elements are grouped together they will be treated as a group in the editor. Click on it and all elements in that group are selected at once